# zoo-cafe

./: AI 技术分享.txt  multi_model_prd_system_design.md
multi-model-prd/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
multi-model-prd/config/: agents.yaml  models.yaml  settings.yaml
multi-model-prd/prompts/: moderator.yaml  stage_design.yaml  stage_elicitation.yaml  stage_finalizing.yaml  stage_writing.yaml  universal_agent.yaml
multi-model-prd/src/: main.py
multi-model-prd/src/agents/: base.py  registry.py
multi-model-prd/src/api/: routes.py  schemas.py
multi-model-prd/src/memory/: long_term.py  short_term.py
multi-model-prd/src/models/: gateway.py  registry.py
multi-model-prd/src/orchestration/: consensus.py  engine.py  summarizer.py  workflow.py
multi-model-prd/src/output/: markdown.py  pdf.py
multi-model-prd/src/utils/: config.py  logger.py  prompt_loader.py  token_counter.py
multi-model-prd/tests/: conftest.py  test_agents.py  test_engine.py  test_gateway.py  test_utils.py  test_workflow.py
